small fix to blurring issue on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+    padding: 0;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
         sans-serif;
@@ -8,13 +9,6 @@ body {
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
 }
 
 .title {
@@ -30,10 +24,6 @@ body {
     margin-top: 0;
     text-align: center;
     font-size: 20px;
-}
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 button {
@@ -73,8 +63,6 @@ button {
 
 .home {
     position: relative;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -91,60 +79,27 @@ button {
     background-color: #fff;
 }
 
-.save-recipe {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-image: url("images/background.jpeg");
-}
-
-.search-recipe {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-image: url("images/background.jpeg");
-}
-
-.search-recipe > .blurredBackground {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-image: url("images/background.jpeg");
-  filter: blur(10px);
-  -webkit-filter: blur(10px);
-  -moz-filter: blur(10px);
-  -o-filter: blur(10px);
-  -ms-filter: blur(10px);
-  transform: scale(1.2);
-}
-
-.save-recipe > .blurredBackground {
+.save-recipe, .search-recipe {
     position: relative;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100vh;
     background-size: cover;
     background-position: center;
     background-image: url("images/background.jpeg");
-    filter: blur(10px);
-    -webkit-filter: blur(10px);
-    -moz-filter: blur(10px);
+}
+
+.blurredBackground {
+    position: relative;    
+    width: 100%;
+    height: 100vh;    
+    background-size: cover;
+    background-position: center;
+    background-image: url("images/background.jpeg");
+    filter: blur(10px);    
+    -webkit-filter: blur(10px);    
     -o-filter: blur(10px);
     -ms-filter: blur(10px);
-    transform: scale(1.2);
+    transform: scale(1.1);    
 }
 
 div {
@@ -163,7 +118,7 @@ div {
     color: #000;
 }
 
-.ReactTags__tagInput {    
+.ReactTags__tagInput {
     display: flex;
     justify-content: center;
     flex-flow: wrap;
@@ -174,7 +129,7 @@ div {
     margin-bottom: 20px;
     padding: 8px;
     border-radius: 6px;
-    border: solid darkgray 1px;    
+    border: solid darkgray 1px;
 }
 
 .ReactTags__tagInputField:focus {
@@ -204,11 +159,11 @@ Input {
     padding: 6px 10px;
     padding-bottom: 8px;
     border-radius: 6px;
-    font-size: small;    
+    font-size: small;
 }
 
 .ReactTags__suggestions li {
-    display:inline-flex;
+    display: inline-flex;
 }
 
 .ReactTags__suggestions ul {
@@ -246,7 +201,7 @@ mark {
 }
 
 li {
-  list-style: none;
+    list-style: none;
 }
 
 .suggestion-list > .container {
@@ -273,7 +228,7 @@ input.ReactTags__tagInputField {
 
 .tags-field:first-child {
     display: flex;
-    justify-content: center;    
+    justify-content: center;
     width: 100%;
 }
 
